--- a/index.htm
+++ b/index.htm
@@ -7,8 +7,8 @@
   <title>داشبورد پروژه</title>
   <link rel="stylesheet" href="styles.css" />
   <!-- Include PapaParse and Chart.js libraries -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="papaparse.min.js"></script>
+  <script src="chart.js"></script>
 </head>
 <body class="theme-dark">
   <header>
