--- a/index.htm
+++ b/index.htm
@@ -196,7 +196,7 @@
       <img src="footer-logo.png" alt="Footer Logo" class="footer-logo" />
     </div>
     <div class="footer-center">
-      <p>توسعه توسط مهدی اکبری فر</p>
+      <p>توسعه توسط یخش هماهنگ‌کننده معاونت تعمیر قطعه</p>
     </div>
     <div class="footer-right">
       <div id="theme-switcher">
