--- a/index.htm
+++ b/index.htm
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>داشبورد پروژه</title>
   <link rel="stylesheet" href="css/main.css" />
-  <!-- Chart.js and PapaParse libraries -->
+  <!-- Chart.js and Time Adapter -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <!-- If needed, include a time-adapter (for Chart.js v3+) -->
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
 </head>
@@ -109,9 +108,8 @@
           </div>
         </div>
       </div>
-      <!-- New row: Calibration Due Date Distribution Timeline Graph -->
+      <!-- Calibration Timeline Chart -->
       <div class="equipment-timeline-container">
-        <h3 class="timeline-title">توزیع تاریخ کالیبراسیون</h3>
         <canvas id="calibrationTimelineChart" aria-label="Calibration Timeline Chart" role="img"></canvas>
       </div>
     </section>
@@ -146,46 +144,7 @@
       </div>
     </section>
 
-    <!-- Section D: R&D Projects & Charts -->
-    <section id="section-d" class="section">
-      <div class="section-header">
-        <div class="section-header-left">
-          <!-- Filter input hidden for charts section -->
-          <input type="text" class="section-filter" placeholder="جستجو..." data-target="" style="opacity: 0; pointer-events: none;" />
-        </div>
-        <div class="section-header-center">
-          <h2>پروژه‌های تحقیق و توسعه</h2>
-        </div>
-        <div class="section-header-right">
-          <!-- Future controls can go here -->
-        </div>
-      </div>
-      <div class="rd-text" id="rd-info-container">
-        <p id="rd-info">در انتظار دریافت داده‌ها ...</p>
-      </div>
-      <div class="charts-container">
-        <div class="chart-item">
-          <canvas id="statusChart" aria-label="نمودار وضعیت پروژه‌ها" role="img"></canvas>
-          <p class="chart-label">Projects Status</p>
-        </div>
-        <div class="chart-item">
-          <canvas id="sowChart" aria-label="نمودار دسته‌بندی SOW" role="img"></canvas>
-          <p class="chart-label">Scope</p>
-        </div>
-        <div class="chart-item">
-          <canvas id="applicantChart" aria-label="نمودار توزیع متقاضیان" role="img"></canvas>
-          <p class="chart-label">Applicant</p>
-        </div>
-      </div>
-      <div class="client-chart-container">
-        <div class="chart-item">
-          <canvas id="clientChart" aria-label="Client Distribution Chart" role="img"></canvas>
-          <p class="chart-label">Client Distribution</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Draggable bars for resizing the grid -->
+    <!-- Resizable Drag Bars -->
     <div id="drag-vertical" class="drag-bar vertical"></div>
     <div id="drag-horizontal" class="drag-bar horizontal"></div>
   </main>
@@ -196,7 +155,7 @@
       <img src="footer-logo.png" alt="Footer Logo" class="footer-logo" />
     </div>
     <div class="footer-center">
-      <p>توسعه توسط یخش هماهنگ‌کننده معاونت تعمیر قطعه</p>
+      <p>توسعه توسط مهدی اکبری فر</p>
     </div>
     <div class="footer-right">
       <div id="theme-switcher">
