--- a/index.htm
+++ b/index.htm
@@ -1,219 +1,293 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>داشبورد پروژه</title>
-  <link rel="stylesheet" href="css/main.css" />
-  <!-- Chart.js and PapaParse libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <!-- If needed, include a time-adapter (for Chart.js v3+) -->
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
-</head>
-<body>
-  <!-- Header -->
-  <header>
-    <div class="header-left">
-      <div id="clock-time"></div>
-      <div id="clock-date"></div>
-    </div>
-    <div class="header-center">
-      <h1>داشبورد پروژه</h1>
-    </div>
-    <div class="header-right">
-      <img src="logo.png" alt="Logo" class="header-logo" />
-    </div>
-  </header>
+<html lang="fa">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>داشبورد پروژه</title>
+    <link rel="stylesheet" href="css/main.css" />
 
-  <!-- Main container using CSS Grid -->
-  <main class="dashboard-grid">
-    <!-- Section A: Current Projects -->
-    <section id="section-a" class="section">
-      <div class="section-header">
-        <div class="section-header-left">
-          <input type="text" class="section-filter" placeholder="جستجو..." data-target="#current-projects-table" />
-        </div>
-        <div class="section-header-center">
-          <h2>پروژه‌های جاری</h2>
-        </div>
-        <div class="section-header-right">
-          <!-- Future controls can go here -->
-        </div>
-      </div>
-      <div class="scrollable-table" id="current-projects-table-container">
-        <table id="current-projects-table">
-          <thead>
-            <tr>
-              <th>Title</th>
-              <th>Description</th>
-              <th>Date</th>
-              <th>Client</th>
-            </tr>
-          </thead>
-          <tbody>
-            <!-- Data from projects_curr.csv or sample data will be populated here -->
-          </tbody>
-        </table>
-      </div>
-    </section>
+    <!-- Embedded Font: BNazanin -->
+    <style>
+      @font-face {
+        font-family: 'BNazanin';
+        src: url('fonts/BNazanin.woff2') format('woff2'),
+             url('fonts/BNazanin.woff') format('woff'),
+             url('fonts/BNazanin.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+      }
+      :lang(fa) {
+        font-family: 'BNazanin', 'Vazir', 'Tahoma', sans-serif !important;
+      }
+    </style>
 
-    <!-- Section B: Equipment Data -->
-    <section id="section-b" class="section">
-      <div class="section-header">
-        <div class="section-header-left">
-          <input type="text" class="section-filter" placeholder="جستجو همه تجهیزات..." data-target=".equipment-container table" />
-        </div>
-        <div class="section-header-center">
-          <h2>داده‌های تجهیز</h2>
-        </div>
-        <div class="section-header-right">
-          <input type="text" class="section-filter" placeholder="فیلتر تجهیزات کالیبراسیون..." data-target="#calibration-equipment-table" />
-        </div>
+    <!-- Chart.js and PapaParse libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
+  </head>
+  <body lang="fa">
+    <!-- Header -->
+    <header>
+      <div class="header-left">
+        <div id="clock-time"></div>
+        <div id="clock-date"></div>
       </div>
-      <div class="equipment-container">
-        <!-- Service Equipment Table -->
-        <div class="equipment-subsection">
-          <h3 class="subsection-header">تجهیزات سرویس</h3>
-          <div class="scrollable-table" id="service-equipment-scroll">
-            <table id="service-equipment-table">
-              <thead>
-                <tr>
-                  <th>کد</th>
-                  <th>نام</th>
-                  <th>تاریخ</th>
-                </tr>
-              </thead>
-              <tbody>
-                <!-- Data from service_equipments.csv will populate here -->
-              </tbody>
-            </table>
+      <div class="header-center">
+        <h1>داشبورد پروژه</h1>
+      </div>
+      <div class="header-right">
+        <img src="logo.png" alt="Logo" class="header-logo" />
+      </div>
+    </header>
+
+    <!-- Mobile Tab Navigation -->
+    <nav class="tab-nav">
+      <button class="tab-button active" data-target="section-a">پروژه‌های جاری</button>
+      <button class="tab-button" data-target="section-b">داده‌های تجهیز</button>
+      <button class="tab-button" data-target="section-c">پروژه‌های آینده</button>
+      <button class="tab-button" data-target="section-d">تحقیق و توسعه</button>
+    </nav>
+
+    <!-- Main Container -->
+    <main class="dashboard-grid">
+      <!-- Section A: Current Projects -->
+      <section id="section-a" class="section active">
+        <div class="section-header">
+          <div class="section-header-left">
+            <input type="text" class="section-filter" placeholder="جستجو..." data-target="#current-projects-table" />
+          </div>
+          <div class="section-header-center">
+            <h2>پروژه‌های جاری</h2>
+          </div>
+          <div class="section-header-right">
+            <!-- Future controls can go here -->
           </div>
         </div>
-        <!-- Calibration Equipment Table -->
-        <div class="equipment-subsection">
-          <h3 class="subsection-header">تجهیزات کالیبراسیون</h3>
-          <div class="scrollable-table" id="calibration-equipment-scroll">
-            <table id="calibration-equipment-table">
-              <thead>
-                <tr>
-                  <th>کد</th>
-                  <th>نام</th>
-                  <th>تاریخ</th>
-                </tr>
-              </thead>
-              <tbody>
-                <!-- Data from calib_equipments.csv will populate here -->
-              </tbody>
-            </table>
+        <div class="scrollable-table" id="current-projects-table-container">
+          <table id="current-projects-table">
+            <thead>
+              <tr>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Date</th>
+                <th>Client</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- Sample data for testing -->
+              <tr>
+                <td>Project A</td>
+                <td>Description of Project A...</td>
+                <td>2023/01/12</td>
+                <td>Acme Inc.</td>
+              </tr>
+              <tr>
+                <td>Project B</td>
+                <td>Description of Project B...</td>
+                <td>2023/12/15</td>
+                <td>Other</td>
+              </tr>
+              <tr>
+                <td>Project C</td>
+                <td>Description of Project C...</td>
+                <td>2023/11/20</td>
+                <td>Beta LLC</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
+
+      <!-- Section B: Equipment Data -->
+      <section id="section-b" class="section">
+        <div class="section-header">
+          <div class="section-header-left">
+            <input type="text" class="section-filter" placeholder="جستجو همه تجهیزات..." data-target=".equipment-container table" />
+          </div>
+          <div class="section-header-center">
+            <h2>داده‌های تجهیز</h2>
+          </div>
+          <div class="section-header-right">
+            <input type="text" class="section-filter" placeholder="فیلتر تجهیزات کالیبراسیون..." data-target="#calibration-equipment-table" />
+          </div>
+        </div>
+        <div class="equipment-container">
+          <!-- Service Equipment Table -->
+          <div class="equipment-subsection">
+            <h3 class="subsection-header">تجهیزات سرویس</h3>
+            <div class="scrollable-table" id="service-equipment-scroll">
+              <table id="service-equipment-table">
+                <thead>
+                  <tr>
+                    <th>کد</th>
+                    <th>نام</th>
+                    <th>تاریخ</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- Placeholder row -->
+                  <tr>
+                    <td>SERV001</td>
+                    <td>Service Equip 1</td>
+                    <td>2023/10/10</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <!-- Calibration Equipment Table -->
+          <div class="equipment-subsection">
+            <h3 class="subsection-header">تجهیزات کالیبراسیون</h3>
+            <div class="scrollable-table" id="calibration-equipment-scroll">
+              <table id="calibration-equipment-table">
+                <thead>
+                  <tr>
+                    <th>کد</th>
+                    <th>نام</th>
+                    <th>تاریخ</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- Placeholder row -->
+                  <tr>
+                    <td>CAL001</td>
+                    <td>Calibration Equip 1</td>
+                    <td>2023/11/15</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <!-- Calibration Timeline Chart -->
+        <div class="equipment-timeline-container">
+          <h3 class="timeline-title">توزیع تاریخ کالیبراسیون</h3>
+          <canvas id="calibrationTimelineChart" aria-label="Calibration Timeline Chart" role="img"></canvas>
+        </div>
+      </section>
+
+      <!-- Section C: Future Projects -->
+      <section id="section-c" class="section">
+        <div class="section-header">
+          <div class="section-header-left">
+            <input type="text" class="section-filter" placeholder="جستجو..." data-target="#future-projects-table" />
+          </div>
+          <div class="section-header-center">
+            <h2>پروژه‌های آینده</h2>
+          </div>
+          <div class="section-header-right">
+            <!-- Future controls can go here -->
+          </div>
+        </div>
+        <div class="scrollable-table" id="future-projects-table-container">
+          <table id="future-projects-table">
+            <thead>
+              <tr>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Date</th>
+                <th>Client</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- Placeholder row -->
+              <tr>
+                <td>Project X</td>
+                <td>Future project description...</td>
+                <td>2024/05/20</td>
+                <td>Future Client Inc.</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
+
+      <!-- Section D: R&D Projects & Charts -->
+      <section id="section-d" class="section">
+        <div class="section-header">
+          <div class="section-header-left">
+            <!-- Hidden filter placeholder -->
+            <input type="text" class="section-filter" placeholder="جستجو..." data-target="" style="opacity: 0; pointer-events: none;" />
+          </div>
+          <div class="section-header-center">
+            <h2>پروژه‌های تحقیق و توسعه</h2>
+          </div>
+          <div class="section-header-right">
+            <!-- Future controls can go here -->
+          </div>
+        </div>
+        <div class="rd-text" id="rd-info-container">
+          <p id="rd-info">در انتظار دریافت داده‌ها ...</p>
+        </div>
+        <div class="charts-container">
+          <div class="chart-item">
+            <canvas id="statusChart" aria-label="نمودار وضعیت پروژه‌ها" role="img"></canvas>
+            <p class="chart-label">Projects Status</p>
+          </div>
+          <div class="chart-item">
+            <canvas id="sowChart" aria-label="نمودار دسته‌بندی SOW" role="img"></canvas>
+            <p class="chart-label">Scope</p>
+          </div>
+          <div class="chart-item">
+            <canvas id="applicantChart" aria-label="نمودار توزیع متقاضیان" role="img"></canvas>
+            <p class="chart-label">Applicant</p>
+          </div>
+        </div>
+        <div class="client-chart-container">
+          <div class="chart-item">
+            <canvas id="clientChart" aria-label="Client Distribution Chart" role="img"></canvas>
+            <p class="chart-label">Client Distribution</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Desktop Drag Bars -->
+      <div id="drag-vertical" class="drag-bar vertical"></div>
+      <div id="drag-horizontal" class="drag-bar horizontal"></div>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+      <div class="footer-left">
+        <img src="footer-logo.png" alt="Footer Logo" class="footer-logo" />
+      </div>
+      <div class="footer-center">
+        <p>توسعه توسط بخش هماهنگ‌کننده معاونت تعمیر قطعه</p>
+      </div>
+      <div class="footer-right">
+        <div id="footer-controls">
+          <div id="font-size-controls">
+            <button id="decrease-font">A-</button>
+            <button id="increase-font">A+</button>
+          </div>
+          <div id="theme-switcher">
+            <div class="theme-option" data-theme="theme-dark"></div>
+            <div class="theme-option" data-theme="theme-light"></div>
+            <div class="theme-option" data-theme="theme-midnight"></div>
+            <div class="theme-option" data-theme="theme-light-colored"></div>
+            <div class="theme-option" data-theme="theme-gray"></div>
+            <div class="theme-option" data-theme="theme-vintage"></div>
+            <div class="theme-option" data-theme="theme-ocean"></div>
+            <div class="theme-option" data-theme="theme-forest"></div>
+            <div class="theme-option" data-theme="theme-solar"></div>
+            <div class="theme-option" data-theme="theme-crimson"></div>
           </div>
         </div>
       </div>
-      <!-- New row: Calibration Due Date Distribution Timeline Graph -->
-      <div class="equipment-timeline-container">
-        <h3 class="timeline-title">توزیع تاریخ کالیبراسیون</h3>
-        <canvas id="calibrationTimelineChart" aria-label="Calibration Timeline Chart" role="img"></canvas>
-      </div>
-    </section>
+    </footer>
 
-    <!-- Section C: Future Projects -->
-    <section id="section-c" class="section">
-      <div class="section-header">
-        <div class="section-header-left">
-          <input type="text" class="section-filter" placeholder="جستجو..." data-target="#future-projects-table" />
-        </div>
-        <div class="section-header-center">
-          <h2>پروژه‌های آینده</h2>
-        </div>
-        <div class="section-header-right">
-          <!-- Future controls can go here -->
-        </div>
-      </div>
-      <div class="scrollable-table" id="future-projects-table-container">
-        <table id="future-projects-table">
-          <thead>
-            <tr>
-              <th>Title</th>
-              <th>Description</th>
-              <th>Date</th>
-              <th>Client</th>
-            </tr>
-          </thead>
-          <tbody>
-            <!-- Data from projects_Future.csv will populate here -->
-          </tbody>
-        </table>
-      </div>
-    </section>
+    <script type="module" src="js/app.js"></script>
+<div id="row-modal" class="modal">
+  <div class="modal-content">
+    <span class="close-modal">&times;</span>
+    <h3>Row Details</h3>
+    <table id="modal-data-table">
+      <thead><tr></tr></thead>
+      <tbody><tr></tr></tbody>
+    </table>
+  </div>
+</div>
 
-    <!-- Section D: R&D Projects & Charts -->
-    <section id="section-d" class="section">
-      <div class="section-header">
-        <div class="section-header-left">
-          <!-- Filter input hidden for charts section -->
-          <input type="text" class="section-filter" placeholder="جستجو..." data-target="" style="opacity: 0; pointer-events: none;" />
-        </div>
-        <div class="section-header-center">
-          <h2>پروژه‌های تحقیق و توسعه</h2>
-        </div>
-        <div class="section-header-right">
-          <!-- Future controls can go here -->
-        </div>
-      </div>
-      <div class="rd-text" id="rd-info-container">
-        <p id="rd-info">در انتظار دریافت داده‌ها ...</p>
-      </div>
-      <div class="charts-container">
-        <div class="chart-item">
-          <canvas id="statusChart" aria-label="نمودار وضعیت پروژه‌ها" role="img"></canvas>
-          <p class="chart-label">Projects Status</p>
-        </div>
-        <div class="chart-item">
-          <canvas id="sowChart" aria-label="نمودار دسته‌بندی SOW" role="img"></canvas>
-          <p class="chart-label">Scope</p>
-        </div>
-        <div class="chart-item">
-          <canvas id="applicantChart" aria-label="نمودار توزیع متقاضیان" role="img"></canvas>
-          <p class="chart-label">Applicant</p>
-        </div>
-      </div>
-      <div class="client-chart-container">
-        <div class="chart-item">
-          <canvas id="clientChart" aria-label="Client Distribution Chart" role="img"></canvas>
-          <p class="chart-label">Client Distribution</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Draggable bars for resizing the grid -->
-    <div id="drag-vertical" class="drag-bar vertical"></div>
-    <div id="drag-horizontal" class="drag-bar horizontal"></div>
-  </main>
-
-  <!-- Footer -->
-  <footer>
-    <div class="footer-left">
-      <img src="footer-logo.png" alt="Footer Logo" class="footer-logo" />
-    </div>
-    <div class="footer-center">
-      <p>توسعه توسط یخش هماهنگ‌کننده معاونت تعمیر قطعه</p>
-    </div>
-    <div class="footer-right">
-      <div id="theme-switcher">
-        <div class="theme-option" data-theme="theme-dark"></div>
-        <div class="theme-option" data-theme="theme-light"></div>
-        <div class="theme-option" data-theme="theme-midnight"></div>
-        <div class="theme-option" data-theme="theme-light-colored"></div>
-        <div class="theme-option" data-theme="theme-gray"></div>
-        <div class="theme-option" data-theme="theme-vintage"></div>
-        <div class="theme-option" data-theme="theme-ocean"></div>
-        <div class="theme-option" data-theme="theme-forest"></div>
-        <div class="theme-option" data-theme="theme-solar"></div>
-        <div class="theme-option" data-theme="theme-crimson"></div>
-      </div>
-    </div>
-  </footer>
-
-  <script type="module" src="js/app.js"></script>
-</body>
+  </body>
 </html>
