--- a/index.htm
+++ b/index.htm
@@ -278,5 +278,16 @@
     </footer>
 
     <script type="module" src="js/app.js"></script>
+<div id="row-modal" class="modal">
+  <div class="modal-content">
+    <span class="close-modal">&times;</span>
+    <h3>Row Details</h3>
+    <table id="modal-data-table">
+      <thead><tr></tr></thead>
+      <tbody><tr></tr></tbody>
+    </table>
+  </div>
+</div>
+
   </body>
 </html>
